// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hasMargin 1`] = `
.pf-c-title.pf-m-xl.pf-m-margin {
  display: block;
  font-size: 1.3125rem;
  font-weight: 400;
  line-height: 1.5;
  margin-top: 1.5rem;
  margin-bottom: 1rem;
}

<h1
  className="pf-c-title pf-m-xl pf-m-margin"
>
  With margin
</h1>
`;

exports[`lg Title 1`] = `
.pf-c-title.pf-m-lg {
  display: block;
  font-size: 1.125rem;
  font-weight: 600;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-lg"
>
  lg
   Title
</h1>
`;

exports[`md Title 1`] = `
.pf-c-title.pf-m-md {
  display: block;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-md"
>
  md
   Title
</h1>
`;

exports[`xl Title 1`] = `
.pf-c-title.pf-m-xl {
  display: block;
  font-size: 1.3125rem;
  font-weight: 400;
  line-height: 1.5;
}

<h1
  className="pf-c-title pf-m-xl"
>
  xl
   Title
</h1>
`;

exports[`xxl Title 1`] = `
.pf-c-title.pf-m-xxl {
  display: block;
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-xxl"
>
  xxl
   Title
</h1>
`;

exports[`xxxl Title 1`] = `
.pf-c-title.pf-m-xxxl {
  display: block;
  font-size: 1.75rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-xxxl"
>
  xxxl
   Title
</h1>
`;

exports[`xxxxl Title 1`] = `
.pf-c-title.pf-m-xxxxl {
  display: block;
  font-size: 2.25rem;
  font-weight: 400;
  line-height: 1.3;
}

<h1
  className="pf-c-title pf-m-xxxxl"
>
  xxxxl
   Title
</h1>
`;
